--- a/demo7/demo.html
+++ b/demo7/demo.html
@@ -11,7 +11,7 @@
     <header>
       <h1>非直接耦合</h1>
       <p>
-        一个模块直接访问另一模块的内容，则称这两个模块为标记耦合
+        两个模块之间没有直接联系，它们之间的联系完全是通过主模块的控制和调用来实现的
       </p>
     </header>
     <div class="m1">
